<!-- dialog_add_ingredient.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/ingredientNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingredient_name_hint"
        android:inputType="text"
        android:autofillHints="name"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/ingredientQuantityEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/quantity_hint"
        android:inputType="number"
        android:autofillHints="quantity"
        android:minHeight="48dp" />

    <!-- Button for confirming the addition of an ingredient -->
    <Button
        android:id="@+id/addIngredientDialogButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="end"
        android:text="@string/add"
        android:contentDescription="@string/add_ingredient_description" />

</LinearLayout>
