<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_vertical">

    <!-- Login Layout -->
    <LinearLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <!-- Email EditText for Login -->
        <EditText
            android:id="@+id/emailLoginEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="12dp"
            android:autofillHints="emailAddress"
            android:background="@color/editTextBackground"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/textColorPrimary" />

        <!-- Password EditText for Login -->
        <EditText
            android:id="@+id/passwordLoginEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:autofillHints="password"
            android:background="@color/editTextBackground"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/textColorPrimary" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="8dp"
            android:text="@string/btn_login"
            android:textColor="@color/textColorPrimary" />

        <TextView
            android:id="@+id/switchToRegisterTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/don_t_have_an_account_register"
            android:textColor="@android:color/holo_blue_dark" />
    </LinearLayout>

    <!-- Registration Layout -->
    <LinearLayout
        android:id="@+id/registerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <!-- Email EditText for Registration -->
        <EditText
            android:id="@+id/emailRegisterEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="12dp"
            android:autofillHints="emailAddress"
            android:background="@color/editTextBackground"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/textColorPrimary" />

        <!-- Password EditText for Registration -->
        <EditText
            android:id="@+id/passwordRegisterEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:autofillHints="password"
            android:background="@color/editTextBackground"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/textColorPrimary" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/btn_register"
            android:textColor="@color/textColorPrimary" />

        <TextView
            android:id="@+id/switchToLoginTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/already_have_an_account_login"
            android:textColor="@android:color/holo_blue_dark" />
    </LinearLayout>
</LinearLayout>
